--- a/tests/index.html
+++ b/tests/index.html
@@ -6,19 +6,26 @@
   <title>simple test</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.22.0.css">
-  <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+	<script  src="https://code.jquery.com/jquery-2.2.4.min.js"  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="  crossorigin="anonymous"></script>
+	<script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>	
   <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
   <script src="http://code.jquery.com/qunit/qunit-1.22.0.js" type="text/javascript"></script>
   <script src="configuration/config.js" type="text/javascript"></script>
   <script src="configuration/log.js"></script>
   <script src="configuration/video-rules.js"></script>
-  <script src="build/ant.min.js" type="text/javascript"></script> 
+  <script src="build/ant.js" type="text/javascript"></script> 
   <link rel="stylesheet" href="http://test-sites.internal.nativo.net/testing/style.css" type="text/css" media="screen">
   <link rel="icon" href="http://test-sites.internal.nativo.net/testing/images/favicon.ico">
   <link rel="shortcut icon" href="http://test-sites.internal.nativo.net/testing/images/favicon.ico">
 </head>
 <body>
+	<iframe id="hiddenIframe" style="display:none !important;">
+		<html>
+			<head></head>
+			<body>iframebodytext</body>
+		<html>
+	</iframe>
   <div id="featured"></div>
   <div id="qunit"></div>
   <div id="container"></div>
